# securelens

./: .env  .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md  __init__.py  __main__.py  api.py  ci.yml  example_vulnerable.py  pyproject.toml  reporter.py
.github/: dependabot.yml
.github/workflows/: ci.yml
examples/: example_safe.py
frontend/: index.html
frontend/frontend/: index.html
securelens/: api.py  cli.py  config.py  exceptions.py  reporter.py  scanner.py
securelens/languages/javascript/: scanner.py
securelens/languages/python/: scanner.py
securelens/llm/: __init__.py  anthropic_client.py  base.py  mock_client.py  openai_client.py
securelens/rules/: loader.py  python_rules.yaml
tests/: test_scanner.py
