[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "securelens"
version = "0.1.0"
description = "AI-powered code vulnerability reviewer with CI/CD integration"
authors = [{ name = "Ali Siddiqui", email = "ali@example.com" }]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
keywords = ["security", "vulnerability", "static-analysis", "AI", "LLM", "devops"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Security",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
]

# Core has zero required dependencies — pure stdlib
dependencies = []

[project.optional-dependencies]
web = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
    "pydantic>=2.7",
]
openai = [
    "openai>=1.30",
]
anthropic = [
    "anthropic>=0.28",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.10",
    "httpx>=0.27",   # for FastAPI test client
]

[project.scripts]
securelens = "securelens.cli:main"

[project.urls]
Homepage = "https://github.com/Alisid07/securelens"
Repository = "https://github.com/Alisid07/securelens"
Issues = "https://github.com/Alisid07/securelens/issues"

[tool.setuptools.packages.find]
include = ["securelens*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
strict = false
ignore_missing_imports = true
